fix: Java 20 compatibility